--- a/index.html
+++ b/index.html
@@ -23,11 +23,11 @@
             </div>
             <div>
                 <label>Password: * </label>
-                <input type="text" name= "password">
+                <input type="password" name= "password">
             </div>
             <div>
                 <label>Confirm Password: * </label>
-                <input type="text" name= "confirm password">
+                <input type="password" name= "confirm password">
             </div>
             <div>
                 <label>Birthday: </label>
