--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
             </div>
             <div>
                 <label>Email Address: * </label>
-                <input type="text" name= "email">
+                <input type="email" name= "email">
             </div>
             <div>
                 <label>Password: * </label>
