--- a/index.html
+++ b/index.html
@@ -44,9 +44,7 @@
                 <input type="radio" id="other" name="gender" value="other">
                 <label for="other">I prefer not to answer</label><br>
             </div>
-            <div>
-                <label>A short description about myself: </label>
-            </div>
+            <p>A short description about myself: </p>
             <textarea> </textarea>
             <div>
                 <label>Favorite Language</label>
@@ -64,9 +62,7 @@
             <div>
                 <input type="submit" value = "Create Account">
             </div>
-            <div>
                 <p>*Indicates a required field</p>
-            </div>
         </form>
     </body>
 </html>
