--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
             <div>
                 <input type="submit" value = "Create Account">
             </div>
-                <p>*Indicates a required field</p>
+            <p>*Indicates a required field.</p>
         </form>
     </body>
 </html>
